# linux_study

./: .gitignore
Template/LCPI-PC-T113-tinalinux/: .gitignore  Makefile  drv_template.c  even.sh  modins.sh
Template/fire/: Makefile  even.sh
dirver/06_gpio_irq/: Makefile  a_test.c
dirver/1_platform_drv/: led_drv.c  led_resource.h  only_plateform.c  reg_chrdev.c
dirver/2_dev_tree/: Makefile  README.md  led_drv.c  my_common.h  reg_chrdev.c
dirver/3_pinctrl/: .gitignore  Makefile  README.md  compile_commands.json  evn.sh  imx6ull-mmc-npi.dts  led_drv.c  make_all.sh  modins.sh  my_common.h  only_plateform.c  reg_chrdev.c
dirver/3_pinctrl/app/: .gitignore  CMakeLists.txt  app_template.c  evn.sh  go_build.sh
dirver/deveice_tree_plateform/: Makefile  a_test.c
dirver/my/deveice_tree_plateform/: a_test copy.c  a_test.c
dirver/my/pinctrl/: Makefile  a_test.c  ledtest.c
dirver/pinctrl/: compile_commands.json  imx6ull-mmc-npi.dts
dirver/platform_drv/: Makefile  README.md  app_template.c  led_res.c  my_common.h
dirver/reference_program/deveice_file_node_test_yh_eg/: Makefile
dirver/reference_program/device_tree_rgb_led_yh_eg/: Makefile
fire/dirver_hello/: Makefile  hellomodule.c
fire/exec/: launch.sh  main.c
fire/fork/: main.c
make_study/make-M-cmd1/: makefile
make_study/make-M-cmd2/: main.c  makefile  run
sys_programming/PIPE/: main.c
sys_programming/exec/: my_log.h
sys_programming/fork/: CMakeLists.txt  launch.sh
